--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
            
         <div class="postButtons">
             <a href="html/bloglist.html"><button>All Posts</button></a>
-            <button onclick="CreatePostModal()">Create Post</button>
+            <button onclick="createPostModal()">Create Post</button>
         </div>
     </div>
 
@@ -64,10 +64,23 @@
         </div>
     </div>
 
-    <div>
+    <div id="create-post-modal">
 
     	<!-- Insert code for Create Post modal here -->
-
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h1 class="sign-heading">Create Post</h1>
+            <hr>
+            <form id="create-post-form" name="CreatePostForm" method="post" action="html/bloglist.html">
+                <label for="PostAuthor" class="label-text">Author</label>
+                <input type="text" id="authorname" placeholder="Enter Author" required>
+                <label for="PostTitle" class="label-text">Title</label>
+                <input type="text" id="posttitle" placeholder="Enter Title" required>
+                <label for="PostDesc" class="label-text">Description</label>
+                <textarea id="postdesc" placeholder="Enter Description....." rows="10" required></textarea>
+                <button type="submit" class="signin-btn">Create</button>
+            </form>
+        </div> 
     </div>
 	<script src="js\header.js"></script>
     <script src="js\index.js"></script>
